# priors

./: .gitignore  .releaserc.json  .releaserc.test.json  BENCHMARKING.md  CHANGELOG.md  README.md  asv-branch-selector.html  asv.conf.json  asv_helper.sh  benchmark.py  benchmark_comparison.py  benchmark_oom_test.py.bak  branches-manifest.json  branches.html  convert_version.py  get_next_dev_version.py  index.json  info.json  regressions.xml  requirements-benchmark.txt  test-selector-local.html  test_incremental.sh
.github/workflows/: asv-benchmarks.yml  benchmarks-reusable.yml  build-python.yml  build-rust.yml  codspeed.yml  commitlint.yml  linting.yml  production-release.yml  python-linting.yml  release.yml  rust-linting.yml  semantic-release.yml  test-release.yml  test-semantic-release.yml  tests.yml
benchmarks/: BRANCH_SELECTOR.md  CI_INTEGRATION.md  LOCAL_GUIDE.md  README.md  WORKFLOW_GUIDE.md  __init__.py  benchmarks.py
branches/ci-benchmarking/: index.html
branches/ci-test-gh-page/: error.html
comparisons/: main_vs_improve-speed.txt
graphs/summary/: benchmarks.FPGrowthLarge.peakmem_fp_growth_large.json  benchmarks.FPGrowthLarge.time_fp_growth_large.json  benchmarks.FPGrowthMedium.peakmem_fp_growth_medium.json  benchmarks.FPGrowthMedium.time_fp_growth_medium.json  benchmarks.FPGrowthSmall.peakmem_fp_growth_small.json  benchmarks.FPGrowthSmall.time_fp_growth_small.json  benchmarks.FPGrowthStreamingSmall.peakmem_fp_growth_streaming_small.json  benchmarks.FPGrowthStreamingSmall.time_fp_growth_streaming_small.json  benchmarks.FPGrowthXLarge.peakmem_fp_growth_xlarge.json  benchmarks.FPGrowthXLarge.time_fp_growth_xlarge.json  benchmarks.ItemScaling.time_scaling_items.json  benchmarks.SupportThreshold.time_support_threshold.json  benchmarks.TransactionScaling.time_scaling_transactions.json
priors/: Cargo.toml  README.md  benchmark_results.json  pyproject.toml  run_lib.py  utils.py
priors/benches/: fp_growth_bench.rs  stress_test.rs
priors/benchmarks/: benchmark_apriori.py  benchmark_memory.py  benchmark_performance.py  run_benchmarks.py  simple_benchmark.py
priors/src/: lib.rs
priors/src/fp/: builder.rs  combinations.rs  memory.rs  mining.rs  mod.rs  storage.rs  tests.rs  tree.rs
priors/src/fp/growth/: builder.rs  mining.rs  mod.rs  tree.rs
priors/src/fp/lazy/: mod.rs  processor.rs  streaming.rs
priors/src/fp/streaming_growth/: mod.rs  processor.rs  state.rs
priors/src/fp/tree/: mod.rs  tree.rs  tree_ops.rs
priors/src/fp/utils/: mod.rs  storage.rs
priors/tests/: conftest.py  test_benchmarks.py  test_bitvector.py  test_comparison.py  test_derar.py  test_fp_growth.py  test_output_comparison.py  test_priors.py  test_streaming.py  test_treeshap.py
scripts/: convert_version.py
