[package]
name = "priors"
version = "0.1.0"
authors = ["Tobias Pitters <tobias@cloudexplain.eu"]
edition = "2024"

[lib]
name = "priors"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3/extension-module"]
default = []  # rlib for benchmarks and tests

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py37"] }
numpy = "0.25.0"
rayon = "1.8"
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
ndarray = "0.16"

# Optimization settings for release builds
[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # Smaller binary size
strip = true           # Remove debug symbols

[[bin]]
name = "stress_test"
path = "benches/stress_test.rs"
required-features = []

[[bench]]
name = "fp_growth_bench"
harness = false
path = "benches/fp_growth_bench.rs"
