[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
name = "priors"
version = "0.1.0"
dependencies = ["numpy",
                ]

[project.optional-dependencies]
dev = ["maturin>=1.0,<2.0",
       "pytest",
       "numpy",
       ]
benchmarks = ["mlxtend", "efficient-apriori", "pytest-benchmarks"]
