[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
name = "priors"
dynamic = ["version"]
description = "Fast frequent pattern mining library"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy",
                ]

[project.optional-dependencies]
dev = ["maturin>=1.0,<2.0",
       "pytest",
       "numpy",
       ]
benchmarks = ["mlxtend", "efficient-apriori", "pytest-benchmarks"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["priors"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
